--- a/ProjectWork_Aleksandrov.Rmd
+++ b/ProjectWork_Aleksandrov.Rmd
@@ -112,39 +112,53 @@ This approach ensures that there are no missing values before using the multinom
 
 heartData <- read.csv("heart.csv")
 
-heartData$place   <- as.factor(heartData[["place"]])
-heartData$cp      <- as.factor(heartData[["cp"]])
+# Convert to character before imputation
+heartData$place   <- as.character(heartData[["place"]])
+heartData$cp      <- as.character(heartData[["cp"]])
+heartData$restecg <- as.character(heartData[["restecg"]])
 
-
+# Convert target to factor
 heartData$hdc     <- as.factor(heartData[["hdc"]])
 
-heartData$restecg <- as.factor(heartData[["restecg"]])
-
+# Convert sex, fbs, exang to numeric 0/1
 heartData$sex   <- ifelse(heartData[["sex"]] == "Male", 1, 0)
-heartData$fbs   <- ifelse(heartData[["fbs"]] == TRUE, 1, 0)
-heartData$exang <- ifelse(heartData[["exang"]] == TRUE, 1, 0)
+heartData$fbs   <- ifelse(heartData$fbs, 1, 0)
+heartData$exang <- ifelse(heartData$exang, 1, 0)
 
+# Numeric imputation (includes fbs and exang!)
 heartData$trestbps[is.na(heartData$trestbps)] <- median(heartData$trestbps, na.rm = TRUE)
 heartData$chol[is.na(heartData$chol)] <- median(heartData$chol, na.rm = TRUE)
 heartData$thalch[is.na(heartData$thalch)] <- median(heartData$thalch, na.rm = TRUE)
 heartData$oldpeak[is.na(heartData$oldpeak)] <- median(heartData$oldpeak, na.rm = TRUE)
-heartData$ca <- NULL
-heartData$thal <- NULL
+
+# Impute missing fbs and exang numerically
+heartData$fbs[is.na(heartData$fbs)]     <- median(heartData$fbs, na.rm = TRUE)
+heartData$exang[is.na(heartData$exang)] <- median(heartData$exang, na.rm = TRUE)
+
+# Remove high-missing columns
+heartData$ca    <- NULL
+heartData$thal  <- NULL
 heartData$slope <- NULL
 
+# Mode imputation for character variables
+mostCommon_place <- names(sort(table(heartData$place), decreasing = TRUE))[1]
+heartData$place[is.na(heartData$place)] <- mostCommon_place
+
+mostCommon_cp <- names(sort(table(heartData$cp), decreasing = TRUE))[1]
+heartData$cp[is.na(heartData$cp)] <- mostCommon_cp
 
 mostCommon_restecg <- names(sort(table(heartData$restecg), decreasing = TRUE))[1]
 heartData$restecg[is.na(heartData$restecg)] <- mostCommon_restecg
 
-mostCommon_fbs <- names(sort(table(heartData$fbs), decreasing = TRUE))[1]
-heartData$fbs[is.na(heartData$fbs)] <- mostCommon_fbs
+# Convert cleaned categories to factors
+heartData$place   <- as.factor(heartData$place)
+heartData$cp      <- as.factor(heartData$cp)
+heartData$restecg <- as.factor(heartData$restecg)
 
-mostCommon_exang <- names(sort(table(heartData$exang), decreasing = TRUE))[1]
-heartData$exang[is.na(heartData$exang)] <- mostCommon_exang
-
-
+# Final check
 colSums(is.na(heartData))
 head(heartData)
+
 
 ```
 
@@ -271,9 +285,9 @@ Sex has a positive coefficient, indicating that males have higher chance of hear
 Another one is exang. It increases the odds of being in any of the disease categories 1-4.
 In addition cp has a large negative indicating that certain chest pains reduces the risk of higher disease categories.
 
-Overall the model selects oldpeak, exang, cp and maximum heart rate as key predictors.
+Overall the model selects oldpeak, exang, cp and maximum heart rate as key predictors 
 
-```{r}
+```{r, message=FALSE, echo=TRUE, results='hide', warning=FALSE}
 
 library(nnet)
 multinomial_regression <- multinom(
@@ -287,8 +301,174 @@ summary(multinomial_regression)
 ```
 # Model Evaluation
 
-(Cross-validation)
+```{r}
+students <- data.frame(
+  name = c("Boyan Aleksandrov", "Maria Nishtelkova", "John Doe"),
+  date = as.Date(c("11-12-2005", "14-12-2005", "09-07-2005"), format = "%d-%m-%Y")
+)
 
+distance <- as.Date("21-08-2020", format="%d-%m-%Y")
+
+students$days_to_distance <- sapply(students$date, function(studentsData) {
+  studentsData <- format(studentsData, "%d-%m-%Y")
+  students_split <- unlist(strsplit(studentsData, "-"))
+  birth <- as.Date(
+    paste(students_split[1], students_split[2], "2020", sep = "-"),
+    format = "%d-%m-%Y"
+  )
+  abs(as.numeric(birth - distance))
+})
+
+closest_student <- which.min(students$days_to_distance)
+chosen <- students[closest_student,]
+
+cat("Selected:", chosen$name, "\n")
+
+seed_val <- as.numeric(format(chosen$date, "%d%m%Y"))
+set.seed(seed_val)
+
+cat("Seed is:", seed_val, "\n")
+
+cv_methods <- c(
+  "Vanilla validation set",
+  "K-Fold (K = 5)",
+  "K-Fold (K = 10)",
+  "LOO-CV"
+)
+
+CV_choice <- sample(cv_methods, 1)
+cat("CV Method:", CV_choice, "\n")
+
+# Define n ONCE for all CV choices
+n <- nrow(heartData)
+
+# ---------------------------------------------------------------------
+# VANILLA VALIDATION (70/30)
+# ---------------------------------------------------------------------
+if (CV_choice == "Vanilla validation set") {
+  
+  set.seed(seed_val)
+  trainIndices <- sample(seq_len(n), size = round(0.7 * n))
+  
+  train_set <- heartData[trainIndices, ]
+  test_set  <- heartData[-trainIndices, ]
+  
+  # ensure target stays factor
+  train_set$hdc <- factor(train_set$hdc)
+  test_set$hdc  <- factor(test_set$hdc)
+  
+  multinom_cv <- multinom(
+    hdc ~ age + sex + place + chol + cp + trestbps +
+      fbs + restecg + thalch + exang + oldpeak,
+    data = train_set,
+    trace = FALSE
+  )
+  
+  pred <- predict(multinom_cv, test_set)
+  
+  accuracy <- mean(pred == test_set$hdc)
+  err <- 1 - accuracy
+  
+  cat("Accuracy:", round(accuracy, 3), " Error rate:", round(err, 3), "\n")
+}
+
+# ---------------------------------------------------------------------
+# LEAVE-ONE-OUT CROSS VALIDATION (LOO-CV)
+# ---------------------------------------------------------------------
+if (CV_choice == "LOO-CV") {
+  
+  loocv_preds <- vector("character", n)
+  
+  for (i in seq_len(n)) {
+    train_set <- heartData[-i, ]
+    test_set  <- heartData[i, , drop = FALSE]
+    
+    train_set$hdc <- factor(train_set$hdc)
+    test_set$hdc  <- factor(test_set$hdc)
+    
+    multinom_cv <- multinom(
+      hdc ~ age + sex + place + chol + cp + trestbps +
+        fbs + restecg + thalch + exang + oldpeak,
+      data = train_set,
+      trace = FALSE
+    )
+    
+    loocv_preds[i] <- predict(multinom_cv, test_set)
+  }
+  
+  acc_loocv <- mean(loocv_preds == heartData$hdc)
+  err_loocv <- 1 - acc_loocv
+  
+  cat("Accuracy:", round(acc_loocv, 3), " Error:", round(err_loocv, 3), "\n")
+}
+
+# ---------------------------------------------------------------------
+# K-FOLD CROSS VALIDATION (K = 5)
+# ---------------------------------------------------------------------
+if (CV_choice == "K-Fold (K = 5)") {
+  
+  K <- 5
+  fold_ids <- sample(rep(1:K, length.out = n))
+  kfold_preds <- vector("character", n)
+  
+  for (k in 1:K) {
+    
+    train_set <- heartData[fold_ids != k, ]
+    test_set  <- heartData[fold_ids == k, ]
+    
+    train_set$hdc <- factor(train_set$hdc)
+    test_set$hdc  <- factor(test_set$hdc)
+    
+    multinom_cv <- multinom(
+      hdc ~ age + sex + place + chol + cp + trestbps +
+        fbs + restecg + thalch + exang + oldpeak,
+      data = train_set,
+      trace = FALSE
+    )
+    
+    kfold_preds[fold_ids == k] <- predict(multinom_cv, test_set)
+  }
+  
+  acc_kfold5 <- mean(kfold_preds == heartData$hdc)
+  err_kfold5 <- 1 - acc_kfold5
+  
+  cat("Accuracy:", round(acc_kfold5, 3), " Error:", round(err_kfold5, 3), "\n")
+}
+
+# ---------------------------------------------------------------------
+# K-FOLD CROSS VALIDATION (K = 10)
+# ---------------------------------------------------------------------
+if (CV_choice == "K-Fold (K = 10)") {
+  
+  K <- 10
+  fold_ids <- sample(rep(1:K, length.out = n))
+  kfold_preds <- vector("character", n)
+  
+  for (k in 1:K) {
+    
+    train_set <- heartData[fold_ids != k, ]
+    test_set  <- heartData[fold_ids == k, ]
+    
+    train_set$hdc <- factor(train_set$hdc)
+    test_set$hdc  <- factor(test_set$hdc)
+    
+    multinom_cv <- multinom(
+      hdc ~ age + sex + place + chol + cp + trestbps +
+        fbs + restecg + thalch + exang + oldpeak,
+      data = train_set,
+      trace = FALSE
+    )
+    
+    kfold_preds[fold_ids == k] <- predict(multinom_cv, test_set)
+  }
+  
+  acc_kfold10 <- mean(kfold_preds == heartData$hdc)
+  err_kfold10 <- 1 - acc_kfold10
+  
+  cat("Accuracy:", round(acc_kfold10, 3), " Error:", round(err_kfold10, 3), "\n")
+}
+
+```
 # Model Improvement
 
 (Stepwise model / alternative model)
